# connect4-montecarlo

./: CMakeLists.txt  README.md  connect4montecarlo-test.cc  connect4montecarlo.cc  demo1.txt  demo2.txt  demo3.txt  game.cpp  game.hpp
